--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         Узнать &rarr;
       </a>
     </p>
-    <img src="./images/two_again.png" class="header__main-illustration" alt="иллюстрация">
+    <img src="./images/two_again.png" class="header__main-illustration" alt="иллюстрация,
+    картина Фёдора Павловича Решетникова 'опять двойка'">
     <div class="header__square-pic rotation"></div>
   </header>
 
@@ -65,7 +66,7 @@
       <ul class="cards">
         <!-- 1 cards -->
         <li class="cards__item">
-          <img class="cards__image" alt="Внимание" src="images/cards-attention.png">
+          <img class="cards__image" alt="Человек держит в руках книгу" src="images/cards-attention.png">
           <h3 class="cards__title">
             Два вида внимания
           </h3>
@@ -75,7 +76,7 @@
         </li>
         <!-- 2 cards -->
         <li class="cards__item">
-          <img class="cards__image" alt="Вспомнить" src="images/cards-recall.png">
+          <img class="cards__image" alt="Задумчивая статуя" src="images/cards-recall.png">
           <h3 class="cards__title">
             Recall
           </h3>
@@ -85,7 +86,7 @@
         </li>
         <!-- 3 cards -->
         <li class="cards__item">
-          <img class="cards__image" alt="Интерливинг" src="images/cards-interliving.png">
+          <img class="cards__image" alt="уважаемые слабовидящий, тут какие-то люди на сером фоне, куда-то идут" src="images/cards-interliving.png">
           <h3 class="cards__title">
             Интерливинг
           </h3>
@@ -95,7 +96,8 @@
         </li>
         <!-- 4 cards -->
         <li class="cards__item">
-          <img class="cards__image" alt="Вопросы" src="images/cards-question.png">
+          <img class="cards__image" alt="комната с отверстиями в стене. Посередине комнаты стоит какой-то чувак...
+          задумался, или приуныл." src="images/cards-question.png">
           <h3 class="cards__title">
             Вопросы
           </h3>
@@ -105,7 +107,7 @@
         </li>
         <!-- 5 cards -->
         <li class="cards__item">
-          <img class="cards__image" alt="Иллюзия компетентности" src="images/cards-competence.png">
+          <img class="cards__image" alt="рука поднимающая вверх стопку книг" src="images/cards-competence.png">
           <h3 class="cards__title">
             Иллюзия компетентности
           </h3>
@@ -268,9 +270,9 @@
           кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
           которые приносят успех в школе, карьере и жизни.
         </p>
-        <blockquote class="khan__quote-author">
+        <p class="khan__quote-author">
           Джордж Лукас
-        </blockquote>
+        </p>
         <p class="khan__quote-author-subline">
           Кинорежиссер, продюсер
         </p>
@@ -284,94 +286,94 @@
     </section>
 
     <section class="kaufman">
-      <h2 class="section-title section-title_theme-dark">
+      <h2 class="section-title section-title_theme_dark">
         Принципы обучения
       </h2>
-      <p class="section-subtitle section-subtitle_theme-dark">
+      <p class="section-subtitle section-subtitle_theme_dark">
         от Джоша Кауфмана
       </p>
 
 
       <div class="kaufman__triangle rotation">
       </div>
-      <ul class="table table_theme-dark">
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+      <ul class="table table_theme_dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             1
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Выберите привлекательный проект.
           </p>
         </li>
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             2
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Сосредоточьтесь на каком-то одном навыке.
           </p>
         </li>
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             3
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Определите целевой уровень мастерства.
           </p>
         </li>
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             4
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Разбейте навык на элементы.
           </p>
         </li>
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             5
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Приготовьте всё необходимое для занятий.
           </p>
         </li>
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             6
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Устраните препятствия для занятий.
           </p>
         </li>
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             7
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Выделите специальное время для занятий.
           </p>
         </li>
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             8
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Создайте быстрые петли обратной связи.
           </p>
         </li>
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             9
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Занимайтесь по расписанию, короткими интенсивными интервалами.
           </p>
         </li>
-        <li class="table__cell table__cell_theme-dark">
-          <h3 class="table__heading table__heading_theme-dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">
             10
           </h3>
-          <p class="table__text table__text_theme-dark">
+          <p class="table__text table__text_theme_dark">
             Уделяйте внимание количеству и скорости.
           </p>
         </li>
@@ -387,22 +389,22 @@
       <ul class="resources__logo-zone">
         <li>
           <a href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="arzamas">
+            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас">
           </a>
         </li>
         <li>
           <a href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="n1">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="н 1">
           </a>
         </li>
         <li>
           <a href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="arzamas">
+            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="стрелка">
           </a>
         </li>
         <li>
           <a href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="arzamas">
+            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="полка">
           </a>
         </li>
       </ul>
@@ -412,11 +414,11 @@
 
   <footer class="footer">
     <div class="footer__columns">
-      <div class="footer__column footer__column_content-copyright">
+      <div class="footer__column footer__column_content_copyright">
         <div class="logo logo_place_footer"></div>
         <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
       </div>
-      <div class="footer__column footer__column_content-info">
+      <div class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">
           О Практикуме
         </h3>
@@ -440,12 +442,12 @@
           </ul>
         </nav>
       </div>
-      <div class="footer__column footer__column_content-social">
+      <div class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
           <li class="footer__list-item">
             <a class="footer__column-link" href="#" target="_blank">
-              <img src="./images/facebook_white.svg" alt="Facebook" class="footer__social-icon">
+              <img src="./images/facebook_white.svg" alt="Фэйсбук" class="footer__social-icon">
               Facebook
             </a>
           </li>
@@ -457,7 +459,7 @@
           </li>
           <li class="footer__list-item">
             <a class="footer__column-link" href="#" target="_blank">
-              <img src="./images/instagram_white.svg" alt="Instagram" class="footer__social-icon">
+              <img src="./images/instagram_white.svg" alt="Инстаграм" class="footer__social-icon">
               Instagram
             </a>
           </li>
